--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
-    "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.3",
+    "cheerio": "^1.0.0-rc.3",
+    "ejs": "^2.6.2",
+    "express": "^4.17.1",
     "mocha": "^5.2.0",
-    "supertest": "^3.3.0"
+    "supertest": "^3.4.2"
   }
 }
